styles.css
/*https://medium.freecodecamp.org/how-to-center-things-with-style-in-css-dc87b7542689
https://www.w3schools.com/howto/howto_js_topnav.asp
https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_modal_img
https://www.w3schools.com/howto/howto_js_slideshow.asp*/

html,body{
    height: 100%;
    margin: 0;
    padding: 0;
    overflow-y: scroll;
}

body{
    /*width: 100%;*/
    background: url("images/grandcanyon.jpg") #835468;
    margin: 0;
    padding: 0;
    height: 100%;
    /*background-color: black;*/
    font-family: "Gill Sans", sans-serif;
    font-size: larger;
    /*color: white;*/
    /*border: solid 10px indigo;*/
}

h1{
    color: white;
    /*font-family: "Arial Rounded MT Bold", sans-serif;*/
    /*font-family: "Optima", sans-serif;*/
    text-transform: uppercase;
    font-family: "Andale Mono", sans-serif;
    font-size: xx-large;
}

.homeHeader{
    background-color: gray;
    color: white;
    font-family: "Apple Chancery", cursive;
    font-size: xx-large;
    width: 100%;
    text-align: center;
    margin: 0;
}

h2{
    background-color: black;
}

.splash{
    display: block;
}

.postSplash{
    display: none;
}

.view{
    display: none;
}

.nowView{
    display: block;
}

.introPage{
    /*background-color: midnightblue;*/

    width: 100%;
    text-align: center;
    position: absolute;
    margin: 0;
    /*color: floralwhite;*/
    color: black;
    /*top: 50%;*/
    transform: translate(0, 50%);
}

.introTextPage{
    display: inline-block;
    margin: 0 auto;
}

.enterWebsite{
    padding: 1%;
    background-color: darkred;
    border-radius: 5px;
    color: lightyellow;
    margin: 2%;
    cursor: pointer;
}

.navigation{
    align-content: center;
    display: block;
    overflow: hidden;
    background-color: darkgray;
    text-align: center;
    margin: 0;
}



.navigation a{
    align-content: center;
    float: left;
    color: white;
    background-color: darkgray;
    padding: 2%;
    font-size: large;
    font-family: "Gill Sans", sans-serif;
}

.navigation a:hover{
    background-color: cornflowerblue;
    color: black;
}

.active{
    display: block;
    z-index: 1;
}

.hidden{
    display: none;
}

.navigation .hamburgerIcon{
    display: none;
}

/*.navigation a.active{*/
/*    background-color: cornflowerblue;*/
/*    color: black;*/
/*}*/

.pages{
    text-align: center;
    align-content: center;
}

.main{
    color: black;
}

.pageContent{
    display: none;
    margin: 1%;
    /*text-align: center;*/
    /*align-content: center;*/
}

.homepageContent{
    display: block;
}

.flexbox-container{
    display: flex;
    flex-direction: row;
    /*max-width: 100%;*/
    flex-wrap: nowrap;
}

.flexbox-container > div{
    display: flex;
    justify-content: center;
    align-items: center;
}

/*helpful for getting responsive layout of images in artwork
https://www.w3schools.com/css/tryit.asp?filename=trycss3_flexbox_image_gallery*/
.flexrow{
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    padding: 0 1%;
}

.flexcolumn{
    flex: 25%;
    flex-direction: column;
    max-width: 50%;
    padding: 0 1%;
}

.education{
    margin: auto;
    text-align: center;
    align-content: center;
}

.flexcol{
    display: flex;
    flex-direction: column;
    max-width: 95%;
    margin: auto;
    text-align: center;
    align-content: center;
}

.column .respArt{
    margin-top: 2%;
    vertical-align: middle;
}

.carousel-cont {
    max-width: 100%;
    position: relative;
    margin: auto;
}

.Feature{
    display: none;
    text-align: center;
    align-content: center;
}

.previous, .next{
    cursor: pointer;
    position: absolute;
    top: 50%;
    width: auto;
    color: black;
    border-radius: 4px;
    font-weight: bolder;
}


.next{
    right: 0;
    border-radius: 4px;
}

.dot{
    cursor: pointer;
    height: 25px;
    width: 25px;
    margin: 0 0.1%;
    background-color: black;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.7s ease-in;
    z-index: 1;
}

.active, .dot:hover{
    background-color: gray;
}

.info{
    border: solid indigo;
    overflow: scroll;
    margin : auto;
    width: 50%;
}

.infoText{
    padding: 3%;
    /*width: 80%;*/
    height: 200px;

}

.form{
    background-color: cornflowerblue;
    width: 50%;

}

.fade{
    -webkit-animation-name: fade;
    -webkit-animation-duration: 3s;
    animation-name:fade;
    animation-duration:3s;
}

button{
    background-color: darkgray;
    color: white;
    width: 30%;
    margin: auto auto 3% auto;
    padding: 2%;
    border-radius: 5px;
    border: 1px solid black;
    font-size: medium;
}

.images{
    cursor: pointer;
    align-content: center;
    text-align: center;
}

.artImages{
    cursor: pointer;
}

.respArt{
    align-content: center;
    text-align: center;
}

.modal{
    display: none;
    background-color: black;
    position: fixed;
    /*width: 80%;*/
    /*height: 80%;*/
    width: 100%;
    height: 100%;
    /*margin: auto;*/
    left: 0;
    top: 0;
    padding-top: 40px;
    overflow-y: scroll;
    /*overflow-x: hidden;*/
    border-radius: 10px;
    border: solid 2px black;
    z-index: 1;
    /*text-align: center;*/
    /*align-content: center;*/
}

.modalContent{
    /*vertical-align: middle;*/
    margin: auto;
    display: block;
    width: 80%;
    max-width: 700px;
}

#caption{
    margin: auto;
    display: block;
    width: 80%;
    max-width: 700px;
    text-align: center;
    color: #ccc;
    padding: 10px 0;
    height: 150px;
}

.closeModal{
    position: absolute;
    color: white;
    top: 15px;
    right: 35px;
    font-size: x-large;
    font-weight: bold;
    transition: 0.4s;
}

.closeModal:hover,
.closeModal:focus{
    color: white;
    text-decoration: none;
    cursor: pointer;
}
/*.footer{*/
/*    font-family: "Snell Roundhand", cursive;*/
/*    position: absolute;*/
/*    color: white;*/
/*    text-align: center;*/
/*    !*align-content: center;*!*/
/*    bottom: 2%;*/
/*    font-size: medium;*/
/*    width: 90%;*/
/*    margin: 0 auto;*/
/*    height: 30px;*/
/*}*/

@-webkit-keyframes fadeEffect {
    from {opacity: 0.3}
    to {opacity: 1}
}

@keyframes fade{
    from {opacity: 0.3}
    to {opacity: 1}
}

@-webkit-keyframes blink-caret {

}

/*Add in responsive CSS*/

@media screen and (max-width: 760px){
    .flexbox-container{
        display: flex;
        flex-direction: column;
        max-width: 95%;
    }

    .column{
        flex: 50%;
        max-width: 50%;
    }

    /*.modal{*/
    /*    max-width: 50%;*/
    /*}*/
    .modalContent{
        width: 100%;
    }

    .images{
        width: 50%;
    }
}

@media screen and (max-width: 600px){
    body{
        overflow-y: scroll;
    }
    /*.column{*/
    /*    flex: 100%;*/
    /*    max-width: 100%;*/
    /*}*/

    .navigation a:not(:first-child){
        display: none;
    }

    .navigation .hamburgerIcon{
        float: left;
        display: block;
    }

    .navigation.responsive{
        position: relative;
        left: 0;
        top: 0;
    }

    .navigation.responsive a{
        float: none;
        display: block;
        text-align: left;
    }
}

@media screen and(min-width: 600px){

}

